tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.error
compile: exit status 1
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.cpp:80:215: warning: multi-character character constant [-Wmultichar]
   80 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.cpp:80:251: warning: multi-character character constant [-Wmultichar]
   80 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.cpp: In function ‘std::vector<std::vector<long int> > heaps(const std::vector<long int>&)’:
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.cpp:143:42: error: binding reference of type ‘std::vector<long int>&’ to ‘const std::vector<long int>’ discards qualifiers
  143 |     res = permute((int64_t)(arr.size()), arr, res);
      |                                          ^~~
/workspace/mochi/tests/algorithms/transpiler/CPP/divide_and_conquer/heaps_algorithm.cpp:115:76: note:   initializing argument 2 of ‘std::vector<std::vector<long int> > permute(int64_t, std::vector<long int>&, std::vector<std::vector<long int> >&)’
  115 | std::vector<std::vector<int64_t>> permute(int64_t k, std::vector<int64_t>& arr, std::vector<std::vector<int64_t>>& res) {
      |                                                      ~~~~~~~~~~~~~~~~~~~~~~^~~
